<!--
    Jeremy Holloway
    CPSC-4150-001
    9/24/2019
    HW2
    C20581376
    jjhollo@g.clemson.edu
    -->
<resources>
    <string name="app_name">Pig Dice</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title">PIG DICE</string>
    <string name="titlebutton">Play Game!</string>
    <string name="action_roll">Roll</string>
    <string name="action_one">Change Turn</string>
    <string name="action_two">End Game</string>
    <string name="action_stop">Stop</string>
    <string name="dice_one">1</string>
    <string name="title_activity_game">Game</string>
    <string name="rulesTitle">Rules for Pig Dice</string>
    <string name="rules1">Players take turns rolling a die\n</string>
    <string name="roll_one">If you roll a one you receive no score for this turn and must pass the die\n</string>
    <string name="roll_2">If roll 2 or higher the number is added to your running total\n</string>
    <string name="choice">You can continue to roll or bank your points safely and change turns\n</string>
    <string name="title_activity_about_pig_dice">About Pig Dice</string>
    <string name="toMenu">Return to Main Menu</string>
    <string name="target">Please set the total score for the game</string>
    <string name="title_activity_dialog_fragment1">DialogFragment1</string>
    <string name="set_target">Save</string>
    <string name="cancel">Cancel Game</string>
    <string name="enter">Enter A Number Greater Than Zero</string>
    <string name="scoreToWin">Score to Win:\t</string>
    <string name="playerT">Current Score:\t</string>
    <string name="playerB">Player Bank:\t</string>
    <string name="compB">Computer Bank:\t</string>
    <string name="turn">Turn:\t</string>
    <string name="creditTitle1">Credits</string>
    <string name="creditImage">Pig Image: https://www.flaticon.com/free-icon/pig_57841</string>
    <string name="creditDice">Die Image: Zybook Dice Game</string>
    <string name="gameOver">Game Over</string>
    <string name="playAgain">Play Again?</string>
    <string name="quit">Quit?</string>
    <string name="placeholder">Placeholder</string>
</resources>
